# jorup

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  SCENARIOS.md  appveyor.yml  index.html  jorfile.json  jorup-init.sh  setup.iss  website_config.json
.ci/: before_deploy.sh  script.sh
.github/workflows/: docs.yml  release-build.yml  release-upload.yml  release.yml  test.yml
ci/: before_deploy.ps1  before_deploy.sh  generate_docs.sh  index.html.template
docs/: index.html
hel/: Cargo.toml
hel/src/: common.rs  main.rs
hel/src/release/: arg.rs  mod.rs
hel/src/testnet/: arg.rs  mod.rs
jorup/: Cargo.toml
jorup-lib/: Cargo.toml
jorup-lib/src/: download.rs  jormungandr.rs  lib.rs  testnet.rs
jorup/src/: channel.rs  common.rs  info.rs  main.rs  release.rs  run.rs  setup.rs  shutdown.rs  update.rs  wallet.rs
jorup/src/utils/: channel.rs  download.rs  github.rs  mod.rs  release.rs  runner.rs
src/: common.rs  config.rs  info.rs  jormungandr_config.rs  lib.rs  main.rs  run.rs  setup.rs  shutdown.rs  update.rs  wallet.rs
src/commands/: blockchain.rs  defaults.rs  info.rs  mod.rs  node.rs  run.rs  setup.rs  shutdown.rs  update.rs  wallet.rs
src/jorfile/: mod.rs  testnet.rs
src/utils/: blockchain.rs  channel.rs  download.rs  github.rs  jcli.rs  jorup_update.rs  mod.rs  print_error.rs  release.rs  runner.rs  version.rs
