[package]
name = "jorup-lib"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"

[dependencies]
error-chain = '0.12'
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
poldercast = { version = "0.7", features = ["serde_derive"] }
platforms = { version = "0.2", features = [ "serde" ] }
chrono = "0.4"

[dev-dependencies]
serde_json = "1.0"
quickcheck = "0.9"
quickcheck_macros = "0.8"

