[package]
name = "jorup"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"

[dependencies]
error-chain = '0.12'
console = "0.9"
indicatif = "0.12"
dialoguer = "0.4"
home = "0.5"
jorup-lib = { path = "../jorup-lib" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
platforms = "0.2"
clap = "2.33"
semver = { version = "0.9.0", features = ["serde"] }
lazy_static = "1.4"
curl = "0.4"
tar = { version = "0.4", default-features = false }
flate2 = { version = "1.0", features = ['zlib'] }
