[package]
name = "jorup"
version = "0.2.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/input-output-hk/jorup"
homepage = "https://github.com/input-output-hk/jorup#README.md"

[dependencies]
error-chain = '0.12'
console = "0.9"
indicatif = "0.12"
dialoguer = "0.4"
dirs = "2.0"
jorup-lib = { path = "../jorup-lib" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
platforms = "0.2"
clap = "2.33"
lazy_static = "1.4"
curl = "0.4"
tokio = "0.1"
tokio-process = "0.2"
tar = { version = "0.4", default-features = false }
flate2 = { version = "1.0", features = ['zlib'] }
